spacing problem solved and added image

--- a/src/App.css
+++ b/src/App.css
@@ -436,6 +436,12 @@ h4.navbarItems:hover {
 
 /* Responsive Design*/
 
+@media (min-width: 721px) and (max-width: 2560px) {
+  .start-img {
+    display: none;
+  }
+}
+
 @media (min-width: 1800px) and (max-width: 2560px) {
   .body-container {
     margin-left: 310px;
@@ -2345,6 +2351,18 @@ h4.navbarItems:hover {
     border-radius: 5px;
   }
 
+  .start-img {
+    width: 100%;
+    margin: 1px 135px 1px 1px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 22px;
+    width: 115%;
+    position: relative;
+    top: 40px;
+  }
+
   .Main-container, .mid-container, .lower-container, .fourth-container, .fifth-container {
     grid-template-columns: 1fr;
   }
@@ -2747,6 +2765,18 @@ h4.navbarItems:hover {
     width: 97px;
     height: 35px;
     border-radius: 5px;
+  }
+
+  .start-img {
+    width: 100%;
+    margin: 1px 135px 1px 1px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 22px;
+    width: 135%;
+    position: relative;
+    top: 60px;
   }
 
   .Main-container,
@@ -3156,6 +3186,19 @@ h4.navbarItems:hover {
     bottom: 18px;
   }
 
+  .start-img {
+    width: 50%;
+    margin: 1px 1px 1px 1px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 1px;
+    width: 90%;
+    position: relative;
+    right: 50px;
+    top: 80px;
+  }
+
   .Main-container,
   .mid-container,
   .lower-container,
@@ -3563,6 +3606,18 @@ h4.navbarItems:hover {
     bottom: 18px;
   }
 
+  .start-img {
+    width: 100%;
+    margin: 1px 70px 1px 1px;
+    position: relative;
+    top: 80px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 1px;
+    width: 120%;
+  }
+
   .Main-container,
   .mid-container,
   .lower-container,
@@ -3571,7 +3626,7 @@ h4.navbarItems:hover {
   }
 
   .Main-container {
-    margin: 15px 1px 5px 1px;
+    margin: 100px 1px 5px 1px;
     padding: 5px;
     width: 85%;
     position: relative;
@@ -3619,6 +3674,7 @@ h4.navbarItems:hover {
     padding: 2px;
     position: relative;
     left: 10px;
+    top: 10px;
   }
 
   .mid-container .grid-1 {
@@ -3673,6 +3729,7 @@ h4.navbarItems:hover {
     padding: 5px;
     position: relative;
     left: 10px;
+    bottom: 130px;
   }
 
   .lower-container .grid-1 .title .highlight {
@@ -3686,7 +3743,7 @@ h4.navbarItems:hover {
   .lower-container .grid-2 {
     height: 100%;
     position: relative;
-    bottom: 20px;
+    top: 20px;
   }
 
   .lower-container .grid-2 .landing-page-image .bankimage {
@@ -3695,7 +3752,7 @@ h4.navbarItems:hover {
 
   .lower-container .grid-3 {
     position: relative;
-    bottom: 70px;
+    bottom: 0px;
     font-size: 1.52em;
   }
 
@@ -3709,6 +3766,7 @@ h4.navbarItems:hover {
     padding: 5px;
     position: relative;
     right: 35px;
+    bottom: 50px;
     width: 80%;
   }
 
@@ -3728,7 +3786,7 @@ h4.navbarItems:hover {
     height: 95%;
     width: 70%;
     position: relative;
-    bottom: 20px;
+    top: 20px;
   }
 
   .fourth-container .grid-2 .landing-page-image .cell {
@@ -3740,6 +3798,8 @@ h4.navbarItems:hover {
     margin: 5px 1px 5px 1px;
     padding: 4px;
     width: 85%;
+    position: relative;
+    top: 50px;
   }
 
   .fifth-container .grid-1 {
@@ -3780,7 +3840,7 @@ h4.navbarItems:hover {
     font-size: 1.52em;
     width: 90%;
     position: relative;
-    bottom: 100px;
+    bottom: 160px;
     right: 10px;
   }
 
@@ -3794,6 +3854,7 @@ h4.navbarItems:hover {
     padding: 10px 10px 10px 10px;
     position: relative;
     left: 20px;
+    bottom: 50px;
   }
 
   .perks .title {
@@ -3971,6 +4032,18 @@ h4.navbarItems:hover {
     position: relative;
     left: 100px;
     bottom: 18px;
+  }
+
+  .start-img {
+    width: 100%;
+    margin: 1px 135px 1px 1px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 22px;
+    width: 135%;
+    position: relative;
+    top: 60px;
   }
 
   .Main-container,
@@ -4474,6 +4547,18 @@ h4.navbarItems:hover {
     bottom: 15px;
   }
 
+  .start-img {
+    width: 100%;
+    margin: 1px 135px 1px 1px;
+  }
+
+  .start-img .start {
+    margin: 1px 1px 1px 22px;
+    width: 135%;
+    position: relative;
+    top: 60px;
+  }
+
 
   .Main-container,
   .mid-container,
@@ -4488,6 +4573,7 @@ h4.navbarItems:hover {
     width: 80%;
     position: relative;
     right: 50px;
+    top: 100px;
   }
 
   .Main-container .grid-1 .title {
@@ -4529,9 +4615,9 @@ h4.navbarItems:hover {
 
   .Main-container .grid-3 {
     position: relative;
-    bottom: 60px;
+    bottom: 150px;
     font-size: 0.9em;
-    width: 95%;
+    width: 80%;
   }
 
   .Main-container .grid-3 .bullet-text {
@@ -4546,12 +4632,14 @@ h4.navbarItems:hover {
     position: relative;
     right: 35px;
     width: 90%;
+    top: 220px;
   }
 
   .mid-container .grid-1 {
     width: 80%;
     position: relative;
     left: 5px;
+    bottom: 150px;
   }
 
   .mid-container .grid-1 .title .highlight {
@@ -4579,7 +4667,7 @@ h4.navbarItems:hover {
     height: 70%;
     position: relative;
     right: 10px;
-    top: 0px;
+    bottom: 170px;
     width: 85%;
   }
 
@@ -4595,7 +4683,7 @@ h4.navbarItems:hover {
     margin: 1px 1px 1px 1px;
     position: relative;
     left: 10px;
-    bottom: 210px;
+    bottom: 440px;
     width: 85%;
   }
 
@@ -4617,6 +4705,7 @@ h4.navbarItems:hover {
     padding: 5px;
     position: relative;
     right: 40px;
+    bottom: 100px;
   }
 
   .lower-container .grid-1 {
@@ -4672,6 +4761,7 @@ h4.navbarItems:hover {
     position: relative;
     right: 35px;
     width: 80%;
+    bottom: 180px;
   }
 
   .fourth-container .grid-1 .title .highlight {
@@ -4696,15 +4786,15 @@ h4.navbarItems:hover {
     width: 70%;
     position: relative;
     left: 30px;
-    bottom: 20px;
+    top: 30px;
   }
 
   .fourth-container .grid-2 .landing-page-image .cell {
     position: relative;
     margin: 1px;
-    right: 10px;
-    width: 80%;
-    height: 100%;
+    right: 40px;
+    width: 100%;
+    height: 110%;
   }
 
   .fifth-container {
@@ -4713,6 +4803,7 @@ h4.navbarItems:hover {
     width: 85%;
     position: relative;
     right: 20px;
+    bottom: 100px;
   }
 
   .fifth-container .grid-1 {
@@ -4745,22 +4836,22 @@ h4.navbarItems:hover {
     width: 70%;
     position: relative;
     left: 45px;
-    bottom: 40px;
+    bottom: 10px;
   }
 
   .fifth-container .grid-2 .landing-page-image .bankimage {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     margin: 1px;
     position: relative;
-    right: 25px;
+    right: 45px;
     bottom: 10px;
   }
 
   .fifth-container .grid-3 {
     width: 90%;
     position: relative;
-    bottom: 250px;
+    bottom: 110px;
     right: 10px;
   }
 
@@ -4776,6 +4867,7 @@ h4.navbarItems:hover {
     padding: 10px 10px 10px 10px;
     position: relative;
     left: 5px;
+    bottom: 50px;
   }
 
   .perks .title {
